Feat: ANT-4702 : RES > import technology repartition